--- a/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
@@ -144,7 +144,7 @@
     <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
         <value>Tax Exempt</value>
     </data>
-    <data name="ddBillingCycleControl1Resource1" xml:space="preserve">
+    <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
         <value></value>
     </data>
     <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
