--- a/Account/App_LocalResources/AddAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.fr.resx
@@ -144,7 +144,7 @@
     <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
         <value>Exempt de taxe</value>
     </data>
-    <data name="ddBillingCycleControl1Resource1" xml:space="preserve">
+    <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
         <value>Cycle de facturation</value>
     </data>
     <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
