--- a/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
@@ -144,7 +144,7 @@
     <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
         <value>Isenção de imposto</value>
     </data>
-    <data name="ddBillingCycleControl1Resource1" xml:space="preserve">
+    <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
         <value>Ciclo de faturamento</value>
     </data>
     <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
