--- a/Account/App_LocalResources/GenericAccountSummary.aspx.pt-br.resx
+++ b/Account/App_LocalResources/GenericAccountSummary.aspx.pt-br.resx
@@ -117,7 +117,7 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="ddBillingCycleControl1Resource1" xml:space="preserve">
+    <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
         <value>Ciclos de faturamento</value>
     </data>
     <data name="LblEndDayOfMonth" xml:space="preserve">
