--- a/Account/App_LocalResources/UpdateAccount.aspx.ja.resx
+++ b/Account/App_LocalResources/UpdateAccount.aspx.ja.resx
@@ -126,7 +126,7 @@
     <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
         <value>免税</value>
     </data>
-    <data name="ddBillingCycleControl1Resource1" xml:space="preserve">
+    <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
         <value>請求サイクル</value>
     </data>
     <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
