--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -646,7 +646,7 @@
         <value>View Online Bill</value>
     </data>
   <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>Usage Audit</value>
+    <value>Usage Calculation Decision Details</value>
   </data>
   <data name="TEXT_ADD_TENANT" xml:space="preserve">
     <value>Add Partition</value>
