--- a/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
@@ -183,4 +183,7 @@
   <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
     <value>[es-MX] Payment</value>
   </data>            
+  <data name="NO_DECISIONS_TEXT" xml:space="preserve">
+    <value>[es-MX] No Transactions Found for the Current Interval</value>
+  </data>   
 </root>
