--- a/Account/App_LocalResources/AddAccount.aspx.it.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.it.resx
@@ -258,4 +258,7 @@
     <data name="tbUserNameResource1.Label" xml:space="preserve">
         <value>Nome utente</value>
     </data>
+    <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
+        <value>[IT]Authentication Type</value>
+    </data>	
 </root>
