--- a/Account/App_LocalResources/AccountUpdated.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AccountUpdated.aspx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
   <data name="accountchangesubmittedSuccessMsg" xml:space="preserve">
     <value>Account Change submitted to Approval Framework</value>
@@ -123,13 +123,13 @@
   <data name="accountchangesubmittedSuccessTitle" xml:space="preserve">
     <value>Account Change Submitted</value>
   </data>
-    <data name="Label1Resource1.Text" xml:space="preserve">
-        <value>The account must have a valid email on file in order to have a new password generated and sent to them.</value>
-    </data>
-    <data name="Label2Resource1.Text" xml:space="preserve">
-        <value>Account Updated</value>
-    </data>
-    <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
-    </data>
+  <data name="Label1Resource1.Text" xml:space="preserve">
+    <value>The account was updated successfully.</value>
+  </data>
+  <data name="Label2Resource1.Text" xml:space="preserve">
+    <value>Account Updated</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet</value>
+  </data>
 </root>
