--- a/Account/App_LocalResources/AccountUpdated.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountUpdated.aspx.fr.resx
@@ -118,18 +118,18 @@
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
   <data name="accountchangesubmittedSuccessMsg" xml:space="preserve">
-    <value>Account Change submitted to Approval Framework</value>
+    <value>[FR]Account Change submitted to Approval Framework</value>
   </data>
   <data name="accountchangesubmittedSuccessTitle" xml:space="preserve">
-    <value>Account Change Submitted</value>
+    <value>[FR]Account Change Submitted</value>
   </data>
-    <data name="Label1Resource1.Text" xml:space="preserve">
-        <value>Le compte a été mis à jour avec succès.</value>
-    </data>
-    <data name="Label2Resource1.Text" xml:space="preserve">
-        <value>Compte mis à jour</value>
-    </data>
-    <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
-    </data>
+  <data name="Label1Resource1.Text" xml:space="preserve">
+    <value>Le compte a été mis à jour avec succès.</value>
+  </data>
+  <data name="Label2Resource1.Text" xml:space="preserve">
+    <value>Compte mis à jour</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet</value>
+  </data>
 </root>
