--- a/Account/App_LocalResources/AccountUpdated.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AccountUpdated.aspx.pt-br.resx
@@ -117,13 +117,19 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Label1Resource1.Text" xml:space="preserve">
-        <value>A conta foi atualizada com sucesso.</value>
-    </data>
-    <data name="Label2Resource1.Text" xml:space="preserve">
-        <value>Conta atualizada</value>
-    </data>
-    <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
-    </data>
+  <data name="accountchangesubmittedSuccessMsg" xml:space="preserve">
+    <value>[pt-BR]Account Change submitted to Approval Framework</value>
+  </data>
+  <data name="accountchangesubmittedSuccessTitle" xml:space="preserve">
+    <value>[pt-BR]Account Change Submitted</value>
+  </data>
+  <data name="Label1Resource1.Text" xml:space="preserve">
+    <value>A conta foi atualizada com sucesso.</value>
+  </data>
+  <data name="Label2Resource1.Text" xml:space="preserve">
+    <value>Conta atualizada</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet</value>
+  </data>
 </root>
