--- a/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
@@ -124,10 +124,10 @@
         <value>Generate Password</value>
     </data>
     <data name="btnValidateResource1.Text" xml:space="preserve">
-        <value>USM Configuration</value>
+        <value>Validate</value>
     </data>
     <data name="btnValidateResource1.Tooltip" xml:space="preserve">
-        <value></value>
+        <value>Validate User Name</value>
     </data>
     <data name="cbApplyDefaultPolicyResource1.BoxLabel" xml:space="preserve">
         <value>Apply Default Policy</value>
@@ -136,22 +136,22 @@
         <value>Apply Template</value>
     </data>
     <data name="cbBillableResource1.BoxLabel" xml:space="preserve">
-        <value></value>
+        <value>Billable</value>
     </data>
     <data name="cbEmailNotificationResource1.BoxLabel" xml:space="preserve">
-        <value></value>
+        <value>E-Mail Notification</value>
     </data>
     <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
         <value>Tax Exempt</value>
     </data>
     <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Billing Cycle</value>
     </data>
     <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
         <value>Branded Site</value>
     </data>
     <data name="ddCurrencyResource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Currency</value>
     </data>
     <data name="ddLanguageResource1.Label" xml:space="preserve">
         <value>Language</value>
@@ -169,10 +169,10 @@
         <value>Status Reason</value>
     </data>
     <data name="ddTimeZoneResource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Time Zone</value>
     </data>
     <data name="LblCyclelist" xml:space="preserve">
-        <value></value>
+        <value>Billing Cycle</value>
     </data>
     <data name="LblEndDayOfMonth" xml:space="preserve">
         <value>End Day of Month</value>
@@ -202,13 +202,13 @@
         <value>Start Month</value>
     </data>
     <data name="lblUsernameOKResource1.Text" xml:space="preserve">
-        <value></value>
+        <value>User Name OK</value>
     </data>
     <data name="ListItemResource1.Text" xml:space="preserve">
         <value>None</value>
     </data>
     <data name="ListItemResource2.Text" xml:space="preserve">
-        <value></value>
+        <value>US English</value>
     </data>
     <data name="MTSection2Resource1.Text" xml:space="preserve">
         <value>Login Information</value>
@@ -229,10 +229,10 @@
         <value>Confirm Password</value>
     </data>
     <data name="tbOtherResource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Other</value>
     </data>
     <data name="tbPasswordResource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Password</value>
     </data>
     <data name="tbPasswordResource1.XType" xml:space="preserve">
         <value>PasswordMeter</value>
@@ -253,9 +253,12 @@
         <value>Tax Exempt ID</value>
     </data>
     <data name="tbTaxExemptIDResource1.XType" xml:space="preserve">
-        <value></value>
+        <value>TextField</value>
     </data>
     <data name="tbUserNameResource1.Label" xml:space="preserve">
         <value>User Name</value>
     </data>
+    <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
+        <value>Authentication Type</value>
+    </data>	
 </root>
