--- a/Account/App_LocalResources/ContactUpdated.aspx.en-GB.resx
+++ b/Account/App_LocalResources/ContactUpdated.aspx.en-GB.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="contactUpdateSuccessMsg" xml:space="preserve">
-        <value>The account number is invalid.</value>
+        <value>The contact information was updated successfully.</value>
     </data>
     <data name="contactUpdateSuccessTitle" xml:space="preserve">
         <value>Contact Update Successful</value>
