--- a/Account/App_LocalResources/ContactUpdated.aspx.ja.resx
+++ b/Account/App_LocalResources/ContactUpdated.aspx.ja.resx
@@ -133,9 +133,9 @@
         <value>MetraNet</value>
     </data>
   <data name="contactchangesubmittedSuccessMsg" xml:space="preserve">
-    <value>Contact Change submitted to Approval Framework</value>
+    <value>[JA]Contact Change submitted to Approval Framework</value>
   </data>
   <data name="contactchangesubmittedSuccessTitle" xml:space="preserve">
-    <value>Contact Change Submitted</value>
+    <value>[JA]Contact Change Submitted</value>
   </data>
 </root>
