--- a/Account/App_LocalResources/ContactUpdated.aspx.pt-br.resx
+++ b/Account/App_LocalResources/ContactUpdated.aspx.pt-br.resx
@@ -132,4 +132,10 @@
     <data name="PageResource1.Title" xml:space="preserve">
         <value>MetraNet</value>
     </data>
+  <data name="contactchangesubmittedSuccessMsg" xml:space="preserve">
+    <value>[pt-BR]Contact Change submitted to Approval Framework</value>
+  </data>
+  <data name="contactchangesubmittedSuccessTitle" xml:space="preserve">
+    <value>[pt-BR]Contact Change Submitted</value>
+  </data>
 </root>
