--- a/Account/App_LocalResources/GenericUpdateAccount.aspx.en-GB.resx
+++ b/Account/App_LocalResources/GenericUpdateAccount.aspx.en-GB.resx
@@ -124,7 +124,7 @@
         <value>10</value>
     </data>
     <data name="MTTitle1Resource1.Text" xml:space="preserve">
-        <value></value>
+        <value>Update Account</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
         <value>MetraNet</value>
