--- a/Account/App_LocalResources/UpdateSystemAccount.aspx.en-GB.resx
+++ b/Account/App_LocalResources/UpdateSystemAccount.aspx.en-GB.resx
@@ -118,22 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="LblAccountStartDate.Label" xml:space="preserve">
-    <value />
+    <value>Account Start Date</value>
   </data>
   <data name="LblAncestorAccount.Label" xml:space="preserve">
-    <value />
+    <value>Parent Account</value>
+  </data>
+  <data name="LblAuthenticationType.Label" xml:space="preserve">
+    <value>Authentication Type</value>
   </data>
   <data name="LblBrandedSite.Label" xml:space="preserve">
     <value>Branded Site</value>
   </data>
   <data name="LblLanguage.Label" xml:space="preserve">
-    <value />
+    <value>Language</value>
   </data>
   <data name="LblSecurityAnswer.Label" xml:space="preserve">
     <value>Security  Answer</value>
   </data>
   <data name="LblSecurityQuestion.Label" xml:space="preserve">
-    <value />
+    <value>Security Question</value>
   </data>
   <data name="LblTimezone.Label" xml:space="preserve">
     <value>Time Zone</value>
@@ -151,7 +154,7 @@
     <value>10</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value />
+    <value>Update System User</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
