--- a/Account/App_LocalResources/UpdateSystemAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/UpdateSystemAccount.aspx.pt-br.resx
@@ -123,6 +123,9 @@
   <data name="LblAncestorAccount.Label" xml:space="preserve">
     <value>Conta pai</value>
   </data>
+  <data name="LblAuthenticationType.Label" xml:space="preserve">
+    <value>[pt-BR]Authentication Type</value>
+  </data>
   <data name="LblBrandedSite.Label" xml:space="preserve">
     <value>Site da marca</value>
   </data>
@@ -157,7 +160,7 @@
     <value>MetraNet</value>
   </data>
   <data name="PendingChangeWarning" xml:space="preserve">
-    <value>[pt-BR] {0}</value>
+    <value>[pt-BR]This account already has a pending change in the approval framework queue. {0} Click here to view pending changes.</value>
   </data>
   <data name="pnlAccountInfoResource1.Text" xml:space="preserve">
     <value>Informações de conta</value>
