--- a/App_GlobalResources/JSConsts.es-MX.resx
+++ b/App_GlobalResources/JSConsts.es-MX.resx
@@ -126,8 +126,14 @@
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
     <value>j/nY g:i:s|j/n/Y</value>
   </data>
+  <data name="DATE_TIME_FORMAT_DEF" xml:space="preserve">
+    <value>n/j/Y g:i:s A</value>
+  </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>j/n/Y g:i:s A</value>
+  </data>
+  <data name="DECIMAL_SEPARATOR" xml:space="preserve">
+    <value>.</value>
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Duplicar</value>
