--- a/Subscriptions/App_LocalResources/Unsubscribe.aspx.en-GB.resx
+++ b/Subscriptions/App_LocalResources/Unsubscribe.aspx.en-GB.resx
@@ -124,16 +124,16 @@
         <value>End Date</value>
     </data>
     <data name="lblDisplayNameResource1.Label" xml:space="preserve">
-        <value></value>
+        <value>Subscription</value>
     </data>
     <data name="MTTitle1Resource1.Text" xml:space="preserve">
-        <value>Unrelated </value>
+        <value>Unsubscribe</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet </value>
+        <value>MetraNet</value>
     </data>
     <data name="pnlMain.Text" xml:space="preserve">
-        <value>Unsubscribe</value>
+        <value>Unsubscribe from Subscription</value>
     </data>
     <data name="StartDateResource1.Label" xml:space="preserve">
         <value>Start Date</value>
